--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -193,11 +193,11 @@ body { background: #f5f5f5; background-size: cover; font-family: Roboto, sans-se
 
 .import-form-content { padding-top: 10px; border-top: 1px solid #f3f3f3; }
 
-.no-padding-right { padding-right: 0; }
-.no-padding-right0 { padding-right: 0; }
+.no-padding-right { padding-right: 0 !important; }
+.no-padding-right0 { padding-right: 0 !important; }
 
-.no-padding-left { padding-left: 0; }
-.no-padding-left0 { padding-left: 0; }
+.no-padding-left { padding-left: 0 !important; }
+.no-padding-left0 { padding-left: 0 !important; }
 
 .watch-video-show-more {text-align: center;cursor: pointer;display: block;width: 250px;margin: auto;background-color: #f8f8f8;padding: 10px 10px;border-radius: 3px;border: 1px solid #d3d3d3;background-image: -webkit-linear-gradient(bottom,#fcfcfc 0,#f8f8f8 100%);background-image: linear-gradient(to top,#fcfcfc 0,#f8f8f8 100%);box-shadow: 0 1px 0 rgba(0,0,0,0.05);font-weight: bold;font-family: Helvetica;font-size: 12px;transition: all 0.1s ease }
 .watch-video-show-more:hover { background-color: #f0f0f0;border-color: #c6c6c6;background-image: -webkit-linear-gradient(bottom,#f0f0f0 0,#f8f8f8 100%);background-image: linear-gradient(to top,#f0f0f0 0,#f8f8f8 100%); }
@@ -1155,30 +1155,29 @@ body.fab_open .fixed-action-btn {z-index: 1150;}
 .cus_slider .slick-next{right: -20px;}
 
 /*Featured Video*/
-.pt_featured_video{position:relative;display: block;margin: -5px 0 10px;}
-.pt_featured_video .video-player a{font-weight: 500;}
-.pt_featured_video .thumbnail_holder{position: relative;width: 100%;min-height: 420px;max-height: 420px;background: #d2d2d2;border-radius: 3px;}
-.pt_featured_video .thumbnail_holder:before {content: '';display: block;position: absolute;left: 100%;margin-left: 14px;top: 45px;margin-top: -10px;width: 0;height: 0;border: 10px solid transparent;border-left-width: 0;border-right-color: #ffffff;filter: drop-shadow(-2px 0px 1px rgba(0, 0, 0, 0.15));z-index: 1;pointer-events: none;}
-.pt_featured_video .thumbnail_holder img{width: 100%;height: auto;position: absolute;top: 50%;right: 0;bottom: 0;left: 50%;display: block;margin: 0;opacity: 1;-webkit-transform: translate(-50%,-50%);transform: translate(-50%,-50%);max-width: 100%;border-radius: 3px;min-width: 100%;min-height: 100%;}
-.pt_featured_video .thumbnail_holder svg{position: absolute;fill: rgba(255, 255, 255, 0.8);width: 85px;height: 85px;top: 50%;left: 50%;transform: translate(-50%, -50%);}
-.pt_featured_video .thumbnail_holder .duration{position: absolute;right: 12px;bottom: 12px;background-color: rgba(0, 0, 0, 0.8);padding: 2px 6px;font-weight: 500;color: rgba(255, 255, 255, 0.85);border-radius: 4px;letter-spacing: .5px;}
-.pt_featured_video .video-player {margin:0;}
-.pt_featured_video .video-player .col-md-4{padding-left:8px}
-.pt_featured_video .video-player .video-title{width: 100%;padding: 15px;height: 420px;background-color: white;box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);border-radius: 3px;position:relative;overflow: hidden;}
-.pt_featured_video .video-player .publisher-element{width: 100%;margin: 0;padding: 0;border: 0;}
-.pt_featured_video .video-player .publisher-element .publisher-avatar {margin-right: 13px;min-width: 48px;}
-.pt_featured_video .video-player .publisher-element .publisher-avatar img{border-radius: 50%;}
-.pt_featured_video .video-player .publisher-element .publisher-name > a{font-size: 19px;white-space: nowrap;overflow: hidden;display: block;text-overflow: ellipsis;max-width: 280px;}
-.pt_featured_video .video-player .publisher-element .publisher-subscribe-button {margin-top: 5px;}
-.pt_featured_video .video-player .publisher-element button, .pt_featured_video .video-player .publisher-element .btn-subscribed {box-shadow: none;padding: 3px 15px;font-size: 13px;color: white;display: inline-block;}
-.pt_featured_video .video-player .publisher-element button svg, .pt_featured_video .video-player .publisher-element .btn-subscribed svg {display:none;}
-.pt_featured_video .video-player .publisher-element .subs-amount {padding: 3.9px 9px;vertical-align: middle;}
-.pt_featured_video .video-player .video-big-title{margin:0;max-height: 258px;overflow-y: auto;padding-bottom: 25px;}
-.pt_featured_video .video-player .video-big-title a{font-family: 'Lato', sans-serif;word-break: break-word;}
-.pt_featured_video .video-player .video-big-title p {font-size: 14px; overflow: hidden;}
-.pt_featured_video .video-player .video-big-share {	border-top: 1px solid #eee;position: absolute;left: 0;right: 0;bottom: 0;height: 50px;padding: 0 15px;display: flex;align-items: center;justify-content: center;box-shadow: 0 -12px 25px 8px #ffffff;background-color: white;}
-.pt_featured_video .video-player .video-big-share span{flex: 1;text-align: center;}
-.pt_featured_video .video-player .video-big-share a {display: inline-flex;align-items: center;justify-content: center;text-decoration: none;font-size: 18px;width: 24px;height: 24px;}
+.pt_featured_videos{position:relative;display: block; height:420px;margin: -5px auto 10px;overflow: hidden;}
+.pt_featured_videos .row a{font-weight: 500;}
+.pt_featured_videos .thumbnail_holder{position: relative;width: 100%;min-height: 420px;max-height: 420px;background: #d2d2d2;border-radius: 3px;}
+.pt_featured_videos .thumbnail_holder img{width: 100%;height: auto;position: absolute;top: 50%;right: 0;bottom: 0;left: 50%;display: block;margin: 0;opacity: 1;-webkit-transform: translate(-50%,-50%);transform: translate(-50%,-50%);max-width: 100%;border-radius: 3px;min-width: 100%;min-height: 100%;}
+.pt_featured_videos .thumbnail_holder svg{position: absolute;fill: rgba(255, 255, 255, 0.8);width: 85px;height: 85px;top: 50%;left: 50%;transform: translate(-50%, -50%);}
+.pt_featured_videos .thumbnail_holder .duration{position: absolute;right: 12px;bottom: 12px;background-color: rgba(0, 0, 0, 0.8);padding: 2px 6px;font-weight: 500;color: rgba(255, 255, 255, 0.85);border-radius: 4px;letter-spacing: .5px;}
+.pt_featured_videos .row {margin:0;}
+.pt_featured_videos .row .col-md-4{padding-left:8px}
+.pt_featured_videos .row .video-title{width: 100%;padding: 15px;height: 420px;background-color: white;box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);border-radius: 3px;position:relative;overflow: hidden;}
+.pt_featured_videos .row .publisher-element{width: 100%;margin: 0;padding: 0;border: 0;}
+.pt_featured_videos .row .publisher-element .publisher-avatar {margin-right: 13px;min-width: 48px;}
+.pt_featured_videos .row .publisher-element .publisher-avatar img{border-radius: 50%;}
+.pt_featured_videos .row .publisher-element .publisher-name > a{font-size: 19px;white-space: nowrap;overflow: hidden;display: block;text-overflow: ellipsis;max-width: 280px;}
+.pt_featured_videos .row .publisher-element .publisher-subscribe-button {margin-top: 5px;}
+.pt_featured_videos .row .publisher-element button, .pt_featured_videos .row .publisher-element .btn-subscribed {box-shadow: none;padding: 3px 15px;font-size: 13px;color: white;display: inline-block;}
+.pt_featured_videos .row .publisher-element button svg, .pt_featured_videos .row .publisher-element .btn-subscribed svg {display:none;}
+.pt_featured_videos .row .publisher-element .subs-amount {padding: 3.9px 9px;vertical-align: middle;}
+.pt_featured_videos .row .video-big-title{margin:0;max-height: 258px;overflow-y: auto;padding-bottom: 25px;}
+.pt_featured_videos .row .video-big-title a{font-family: 'Lato', sans-serif;word-break: break-word;}
+.pt_featured_videos .row .video-big-title p {font-size: 14px; overflow: hidden;}
+.pt_featured_videos .row .video-big-share {	border-top: 1px solid #eee;position: absolute;left: 0;right: 0;bottom: 0;height: 50px;padding: 0 15px;display: flex;align-items: center;justify-content: center;box-shadow: 0 -12px 25px 8px #ffffff;background-color: white;}
+.pt_featured_videos .row .video-big-share span{flex: 1;text-align: center;}
+.pt_featured_videos .row .video-big-share a {display: inline-flex;align-items: center;justify-content: center;text-decoration: none;font-size: 18px;width: 24px;height: 24px;}
 
 /*View More Link*/
 .view_more_link{margin-left: auto;overflow:hidden;}
