--- a/themes/default/layout/home/content.html
+++ b/themes/default/layout/home/content.html
@@ -1,50 +1,8 @@
 <div class="video-player-page">
 	<div class="top-video content yp_trans">
-		<div class="pt_featured_video">
-			<div class="home-page-categories">
-				<div class="title">
-					<h4><div style="background:#E91E63"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-award"><circle cx="12" cy="8" r="7"></circle><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"></polyline></svg></div> {{LANG featured_video}}</h4>
-				</div>
-			</div>
-			<div class="video-player row">
-				<div class="col-md-8 no-padding-left" id="no_padding">
-					<a href="{{URL}}" data-load="?link1=watch&id={{VIDEO_ID_}}">
-						<div class="thumbnail_holder">
-							<img src="{{THUMBNAIL}}">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg>
-							<span class="duration">{{DURATION}}</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 no-padding-right" id="no_padding">
-					<div class="video-title">
-						<input type="hidden" value="{{ID}}" id="video-id">
-						<div class="publisher-element">
-							<div class="publisher-avatar pull-left">
-								<a href="{{USER url}}" data-load="?link1=timeline&id={{USER username}}"><img src="{{USER avatar}}" alt="{{USER name}}"></a>
-							</div>
-							<div class="publisher-name">
-								<a href="{{USER url}}" data-load="?link1=timeline&id={{USER username}}">{{USER name_v}}</a>
-								<div class="publisher-subscribe-button">{{SUBSCIBE_BUTTON}}</div>
-							</div>
-							<div class="clear"></div>
-						</div>
-						<hr>
-						<div class="video-big-title">
-							<a href="{{URL}}" data-load="?link1=watch&id={{VIDEO_ID_}}">{{TITLE}}</a>
-							<p>{{DESC}}</p>
-						</div>
-						<div class="clear"></div>
-						<div class="video-big-share">
-							<span title="{{LANG share}}"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#888" d="M21,11L14,4V8C7,9 4,14 3,19C5.5,15.5 9,13.9 14,13.9V18L21,11Z"></path></svg></span>
-							<span><a href="https://www.facebook.com/sharer/sharer.php?u={{URL}}"><i class="fa fa-facebook"></i></a></span>
-							<span><a href="https://twitter.com/home?status={{URL}}"><i class="fa fa-twitter"></i></a></span>
-							<span><a href="https://plus.google.com/share?url={{URL}}"><i class="fa fa-google"></i></a></span>
-							<span><a href="https://www.linkedin.com/shareArticle?mini=true&url={{URL}}&title={{TITLE}}"><i class="fa fa-linkedin"></i></a></span>
-							<span><a href="https://pinterest.com/pin/create/button/?url={{URL}}&media={{THUMBNAIL}}"><i class="fa fa-pinterest"></i></a></span>
-						</div>
-					</div>
-				</div>
+		<div class="pt_featured_videos">
+				<div class="row">
+				{{FEATURED_LIST}}
 			</div>
 		</div>
 	</div>
@@ -108,20 +66,35 @@
 
     {{HOME_PAGE_VIDEOS}}
 </div>
+<script type="text/javascript" src="{{CONFIG theme_url}}/js/jquery.fCarousel.min.js"></script>
 <script>
-$(document).ready(function() {
-if( !$.trim( $('.pt_four_videos_trend').html() ).length ) {
-	$('.hide_trend').html("");
-};
-});
-
-$(document).ready(function() {
-if( !$.trim( $('.pt_four_videos_top').html() ).length ) {
-	$('.hide_top').html("");
-};
-});
 
 $(document).ready(function(){
+	if( !$.trim( $('.pt_four_videos_trend').html() ).length ) {
+		$('.hide_trend').html("");
+	};
+	if( !$.trim( $('.pt_four_videos_top').html() ).length ) {
+		$('.hide_top').html("");
+	};
+	var carousel1 = $('.pt_featured_videos .row');
+	carousel1.fCarousel({
+		'separation'	:	450,
+		'distance'		:	400,
+		'opacity'		:	0.5,
+		'keyboardNav'	:	false,
+		'arrows'		:	true,
+		'arrowsClass'	:	['f_arrow','',''],
+		'responsive'	:	{
+								0		:	{ 'separation' : 100, 'opacity' : 0, 'arrows' : false },
+								480		:	{ 'separation' : 200, 'distance' : 500, 'opacity' : 0.2, 'arrows' : true },
+								768		:	{ 'separation' : 300, 'opacity' : 0.3 },
+								1024	:	{ 'separation' : 450, 'distance' : 400, 'opacity' : 0.5 }
+							},
+		'onChange'		:	function(carousel){
+								
+							}
+	});
+
   $('.cus_slider').slick({
   infinite: false,
   slidesToShow: 5,
