--- a/themes/default/layout/watch/content.html
+++ b/themes/default/layout/watch/content.html
@@ -615,7 +615,7 @@
 <script type="text/javascript">
 
 <?php if ($pt->config->player_type == 'plyr' && empty($pt->get_video->youtube)) { ?>
-	const player = new Plyr('#my-video_<?php echo $pt->get_video->id; ?>', {
+	const player = new Plyr('#my-video', {
 	    /* options */
 	});
 <?php } else if ($pt->config->player_type == 'fluidPlayer' && empty($pt->get_video->youtube)) { ?>
