--- a/themes/default/layout/watch/content.html
+++ b/themes/default/layout/watch/content.html
@@ -55,30 +55,32 @@
 						</script>
 					<?php } ?>
 					<?php } else {  ?>
-						<video id="my-video<?php if ($pt->config->player_type == 'fluidPlayer') { ?>_<?php echo $pt->get_video->id; ?><?php } ?>" controls  <?php if ($pt->config->player_type == 'videojs') { ?>   class="video-js" data-setup=''  <?php } ?> <?php if (empty($pt->ad_image)) { ?>  <?php } ?> style="width:100%; height:100%;position: relative;" poster="{{THUMBNAIL}}" >
+						<video id="my-video<?php if ($pt->config->player_type == 'fluidPlayer') { ?>_<?php echo $pt->get_video->id; ?><?php } ?>"  controls
+                        crossorigin
+                        playsinline  <?php if ($pt->config->player_type == 'videojs') { ?>   class="video-js" data-setup=''  <?php } ?> <?php if (empty($pt->ad_image)) { ?>  <?php } ?> style="width:100%; height:100%;position: relative;" poster="{{THUMBNAIL}}" >
 			               <?php if (!empty($pt->video_4096)) { ?>
-			               <source src="{{VIDEO_LOCATION_4096}}" type="{{VIDEO_TYPE}}" data-quality="4K" title='4K' label='4K' res='4096'>
+			               <source src="{{VIDEO_LOCATION_4096}}" type="{{VIDEO_TYPE}}" data-quality="4K" title='4K' label='4K' size='4096'>
 			               <?php } ?>
 			               <?php if (!empty($pt->video_2048)) { ?>
-			               <source src="{{VIDEO_LOCATION_2048}}" type="{{VIDEO_TYPE}}" data-quality="2K" title='2K' label='2K' res='2048'>
+			               <source src="{{VIDEO_LOCATION_2048}}" type="{{VIDEO_TYPE}}" data-quality="2K" title='2K' label='2K' size='size'>
 			               <?php } ?>
 			               <?php if (!empty($pt->video_1080)) { ?>
-			               <source src="{{VIDEO_LOCATION_1080}}" type="{{VIDEO_TYPE}}" data-quality="1080p" title='1080p' label='1080p' res='1080'>
+			               <source src="{{VIDEO_LOCATION_1080}}" type="{{VIDEO_TYPE}}" data-quality="1080p" title='1080p' label='1080p' size='1080'>
 			               <?php } ?>
 			               <?php if (!empty($pt->video_720)) { ?>
-			               <source src="{{VIDEO_LOCATION_720}}" type="{{VIDEO_TYPE}}" data-quality="720p" title='720p' label='720p' res='720'>
+			               <source src="{{VIDEO_LOCATION_720}}" type="{{VIDEO_TYPE}}" data-quality="720p" title='720p' label='720p' size='720'>
 			               <?php } ?>
 			               <?php if (!empty($pt->video_480)) { ?>
-			               <source src="{{VIDEO_LOCATION_480}}" type="{{VIDEO_TYPE}}" data-quality="480p" title='480p' label='480p' res='480'>
+			               <source src="{{VIDEO_LOCATION_480}}" type="{{VIDEO_TYPE}}" data-quality="480p" title='480p' label='480p' size='480'>
 			               <?php } ?>
 			               <?php if (!empty($pt->video_360)) { ?>
-			               <source src="{{VIDEO_LOCATION_360}}" type="{{VIDEO_TYPE}}" data-quality="360p" title='360p' label='360p' res='360'>
+			               <source src="{{VIDEO_LOCATION_360}}" type="{{VIDEO_TYPE}}" data-quality="360p" title='360p' label='360p' size='360'>
 			               <?php } ?>
 			               <?php if (!empty($pt->video_240)) { ?>
-			               <source src="{{VIDEO_LOCATION_240}}" type="{{VIDEO_TYPE}}" data-quality="240p" title='240p' label='240p' res='240'>
+			               <source src="{{VIDEO_LOCATION_240}}" type="{{VIDEO_TYPE}}" data-quality="240p" title='240p' label='240p' size='240'>
 			               <?php } ?>
 			               <?php if (!empty($pt->get_video->youtube) || (!empty($pt->get_video->video_location) && empty($pt->video_360))) { ?>
-			               <source src="{{VIDEO_LOCATION}}" type="{{VIDEO_TYPE}}" data-quality="360p" title='360p' label='360p' res='360'>
+			               <source src="{{VIDEO_LOCATION}}" type="{{VIDEO_TYPE}}" data-quality="360p" title='360p' label='360p' size='360'>
 			               <?php } ?>
 			               Your browser does not support HTML5 video.
 			               <!-- //src="http://www.youtube.com/watch?v=nOEw9iiopwI" type="video/youtube" -->
