--- a/themes/default/layout/watch/content.html
+++ b/themes/default/layout/watch/content.html
@@ -620,7 +620,7 @@
 
 <?php if ($pt->config->player_type == 'plyr' && empty($pt->get_video->youtube)) { ?>
 	const player = new Plyr('#my-video', {
-	    /* options */
+	    fullscreen: { enabled: true, fallback: true, iosNative: false }
 	});
 <?php } else if ($pt->config->player_type == 'fluidPlayer' && empty($pt->get_video->youtube)) { ?>
 
