--- a/themes/default/layout/watch/content.html
+++ b/themes/default/layout/watch/content.html
@@ -621,7 +621,9 @@
 <?php if ($pt->config->player_type == 'plyr' && empty($pt->get_video->youtube)) { ?>
 	const player = new Plyr('#my-video', {
 	    fullscreen: { enabled: true, fallback: true, iosNative: false },
-	    autoplay: true,
+	});
+	player.on('ready', event => {
+	    player.play();
 	});
 <?php } else if ($pt->config->player_type == 'fluidPlayer' && empty($pt->get_video->youtube)) { ?>
 
