--- a/themes/default/player/css/plyr/plyr.css
+++ b/themes/default/player/css/plyr/plyr.css
@@ -995,7 +995,7 @@ a.plyr__control::before {
 	height: 100%;
 	margin: 0;
 	width: 100%;
-	position:relative;
+	position:fixed;
 }
 
 .plyr:-ms-fullscreen {
@@ -1004,7 +1004,7 @@ a.plyr__control::before {
 	height: 100%;
 	margin: 0;
 	width: 100%;
-	position:relative;
+	position:fixed;
 }
 
 .plyr:fullscreen {
