--- a/themes/default/player/css/plyr/plyr.css
+++ b/themes/default/player/css/plyr/plyr.css
@@ -1016,16 +1016,19 @@ a.plyr__control::before {
 .plyr:-webkit-full-screen video {
 	height: 100%
 	width:100%;
+	object-fit:fill;
 }
 
 .plyr:-ms-fullscreen video {
 	height: 100%
 	width:100%;
+	object-fit:fill;
 }
 
 .plyr:fullscreen video {
 	height: 100%
 	width:100%;
+	object-fit:fill;
 }
 
 .plyr:-webkit-full-screen .plyr__video-wrapper {
